cu-init/traefik-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
  labels:
    app: traefik-ingress-lb
    kubernetes.io/cluster-service: "true"
spec:
  selector:
    app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8081
---
# Ingress Definition for UI
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  labels:
    app: traefik-web-ui
    kubernetes.io/cluster-service: "true"
spec:
  rules:
  - host: traefik-ui.133.133.134.119.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: web
